@@ -2,11 +2,11 @@
 
 [assembly: AssemblyCompany("Digimezzo")]
 [assembly: AssemblyCopyright("Copyright Digimezzo © 2013 - 2017")]
-[assembly: AssemblyVersion("1.1.0.473")]
-[assembly: AssemblyFileVersion("1.1.0.473")]
+[assembly: AssemblyVersion("1.1.0.474")]
+[assembly: AssemblyFileVersion("1.1.0.474")]
 
 #if DEBUG
-[assembly: AssemblyInformationalVersion("1.1.0.473 Preview")]
+[assembly: AssemblyInformationalVersion("1.1.0.474 Preview")]
 #else
-[assembly: AssemblyInformationalVersion("1.1.0.473")]
+[assembly: AssemblyInformationalVersion("1.1.0.474")]
 #endif
